edit home page, 9/9 00:14

--- a/resources/sass/pages/_admin.scss
+++ b/resources/sass/pages/_admin.scss
@@ -3014,6 +3014,7 @@
     padding-bottom: 0 !important;
     font-size: 13px !important;
     color: $gray !important;
+    line-height: unset !important;
 }
 
 .admin-form__group .select2-container.select2-container--default .select2-selection__arrow {
