edit home page, 9/9 01:06

--- a/resources/sass/pages/_admin.scss
+++ b/resources/sass/pages/_admin.scss
@@ -744,6 +744,8 @@
         .admin-form__input {
             flex: 1;
             min-width: 140px;
+            padding: 8px 12px;
+            border: 1px solid #ced4da;
         }
     }
 
