edit home page, 9/9 19:23

--- a/resources/sass/pages/_admin.scss
+++ b/resources/sass/pages/_admin.scss
@@ -776,11 +776,10 @@
 
     &__header {
         padding: 12px 16px;
-        text-align: left;
+        text-align: center;
         font-weight: $font-weight-bold;
         color: $gray;
         font-size: 15px;
-        text-transform: uppercase;
         letter-spacing: 0.3px;
         border-right: 1px solid $gray-300;
 
@@ -792,31 +791,26 @@
         &--symbol {
             width: 120px;
             text-align: center;
-            font-size: 13px;
         }
 
         &--title {
             width: auto;
             min-width: 250px;
-            font-size: 14px;
         }
 
         &--date {
             width: 110px;
             text-align: center;
-            font-size: 12px;
         }
 
         &--department {
             width: 200px;
             text-align: center;
-            font-size: 13px;
         }
 
         &--actions {
             width: 150px;
             text-align: center;
-            font-size: 13px;
         }
 
         @include mobile {
