--- a/resources/sass/pages/_admin.scss
+++ b/resources/sass/pages/_admin.scss
@@ -2932,6 +2932,14 @@
     line-height: 1.3;
 }
 
+.admin-category-simple-description {
+    font-size: 13px;
+    color: $text-muted;
+    margin: 4px 0 0 0;
+    line-height: 1.4;
+    word-break: break-word;
+}
+
 .admin-category-simple-actions {
     display: flex;
     gap: 6px;
