--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -191,6 +191,22 @@
             @include mobile {
                 margin-right: 4px;
             }
+
+            &--center {
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                
+                .nav__user-name {
+                    font-size: 0.85em;
+                }
+                
+                small {
+                    font-size: 0.7em;
+                    opacity: 0.8;
+                }
+            }
         }
 
         &__dropdown-item {
