--- a/resources/sass/pages/_admin.scss
+++ b/resources/sass/pages/_admin.scss
@@ -237,8 +237,12 @@
 }
 
 .admin-content {
-    max-width: 1200px;
+    max-width: 1400px;
     margin: 0 auto;
+
+    .container {
+        max-width: 1400px;
+    }
 }
 
 // Admin Page
